# sg2002-arceos

./: Cargo.toml  uEnv.txt
.cargo/: config.toml
axplat-riscv64-sg2002/: Cargo.toml  axconfig.toml  axconfig.toml.bak  axconfig.toml.nommu  test.S
axplat-riscv64-sg2002/src/: boot.rs  console.rs  init.rs  irq.rs  lib.rs  mem.rs  power.rs  time.rs
dw_apb_uart/: Cargo.toml
dw_apb_uart/src/: lib.rs
examples/helloworld/: Cargo.toml  arm.py  car_control_test.py  motor.py  uart.py
examples/helloworld/src/: arm.rs  camera.rs  gc4653.rs  main.rs  ssd1306.rs  sts3215.rs  utils.rs  wifi.rs
scripts/make/: cargo.mk  qemu.mk
